--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,17 @@
 {
+    "manifest_version": 2,
     "name": "Dark Meeting",
     "description": "Custom dark theme for Google Meet!",
     "version": "1.0",
-    "manifest_version": 3,
-    "permissions": [ "activeTab" ],
     "web_accessible_resources": [
-        {
-            "resources": [ "dark.style.css" ],
-            "matches": [ "https://meet.google.com/*" ]
-        }
+        "dark.style.css"
+    ],
+    "permissions": [
+        "activeTab"
     ],
     "content_scripts": [
         {
-            "matches": [ "https://meet.google.com/*" ],
+            "matches": [ "*://meet.google.com/*" ],
             "js": [ "inject_theme.js" ]
         }
     ]
